--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "football-dashboard": "file:",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^6.30.0",
     "react-scripts": "5.0.1",
     "recharts": "^2.15.1",
     "web-vitals": "^2.1.4"
